# jgsysutil

./: .gitignore  .mypy.ini  CMakeLists.txt  Makefile  common.nix  default.nix  flake.nix  format  lint  setup.py  shell.nix
integration/: block_util.py  loop_device.py  test  test_prepare_drive.py  test_randomize.py
jgns/: commands.py  config.py  deploy_dotfiles.py  deploy_nixos.py  expanduser.py  format_drive.py  init_user.py  install_user.py  main.py  prepare_drive.py  randomize_drive.py  subcommand.py  update_system.py  update_user.py
src/jgsysutil/: commands.py.in  main.py  prepare_drive.py  randomize_drive.py  typing.py
test/: test_partition_path.py
